--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "test": "vitest",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -27,6 +28,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vitest": "^1.1.0"
   }
 }
